# maroon_fund

./: .gitignore  Makefile  README.md  TRADING_SYSTEM_README.md  portfolio_equity_curve_Optimized.csv  portfolio_equity_curve_Sell_100.csv  portfolio_equity_curve_Sell_3.csv  portfolio_equity_curve_Sell_Proportional.csv  portfolio_summary_Optimized.csv  portfolio_summary_Sell_100.csv  portfolio_summary_Sell_3.csv  portfolio_summary_Sell_Proportional.csv  portfolio_trades_Optimized.csv  portfolio_trades_Sell_100.csv  portfolio_trades_Sell_3.csv  portfolio_trades_Sell_Proportional.csv  pyproject.toml  training_input.csv  xgboost_model.joblib
1_buyside_model/: 1_manual_input.py  3_visualizing_features.py  4_model.py  5_test_input.py  6_loaded_model.py  README.md  requirements.txt  test_input.csv  training_input.csv
2_sellside_model/: 1_sell_signal_input.py  2_Model.py  3_Loaded_model.py  4_Visualize Prediction.py  README.md  nvda_sell_model.joblib  requirements.txt
combined_buy_sell_model/: 0_Generate_Buy_Test_Data.py  0_Generate_Buy_Training_Data.py  0_Generate_Sell_Training_Data.py  0_run_and_done  1_Train_Models.py  2_Loaded_Models.py  3_Visualize.py  4_Future_Predictions.py  Makefile  NVDA_buy_model.joblib  NVDA_sell_model.joblib  README.md  combined_analysis_all_20230103_20251110.csv  combined_analysis_amat_20240201_20251110.csv  combined_analysis_lly_20220201_20251110.csv  combined_analysis_meta_20230201_20251110.csv  combined_analysis_msft_20240201_20251110.csv  combined_analysis_nvda_20240201_20250930.csv  combined_analysis_nvda_20240201_20251110.csv  config.py  (+14 more)
(+117 files in other folders)
