[project]
name = "maroon-fund"
version = "0.1.0"
description = "Combined buy/sell signal model for stock trading"
requires-python = ">= 3.10"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "joblib>=1.3",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
    "plotly>=5.18",
    "yfinance>=0.2",
    "ta>=0.11",
    "scipy>=1.11",
    "tabulate>=0.9",
]
